Business model draft 1

--- a/ttm4905_master/chapter5.tex
+++ b/ttm4905_master/chapter5.tex
@@ -1,1 +1,23 @@
-\chapter{Chapter 5}
+\chapter{Chapter 5 - Proposal of Business Model}
+\section{Business model}
+\subsection{Customer Segments}
+
+\begin{itemize}
+    \item Users of mazemap will want to be someone who resides over a certain area
+    \item Freemium might be harder to implement, due to regulatory affairs.
+    \item what needs to be in place customer side: low amount of financial means, prefferably wifi for navigation (might be seen as detrimental, but also may hamper the service). Existing customer base. 
+\end{itemize}
+
+\subsection{Value Propositions}
+
+\begin{itemize}
+    \item  
+\end{itemize}
+
+\subsection{Channels}
+\subsection{Customer Relationships}
+\subsection{Revenue Streams}
+\subsection{Key Activities}
+\subsection{Key Resources}
+\subsection{Key Partnerships}
+\subsection{Cost Structure}
