--- a/ttm4905_master/main.tex
+++ b/ttm4905_master/main.tex
@@ -51,6 +51,9 @@
 
 % similarly you may add a separate acknowledgments page
 
+\include{acknowledgments}
+\cleardoublepage
+
 \tableofcontents*
 \cleardoublepage
 
@@ -78,7 +81,6 @@
 
 \pagenumbering{arabic}
 \pagestyle{ruled}
-\include{example_chapter}
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
