--- a/ttm4905_master/glossary.tex
+++ b/ttm4905_master/glossary.tex
@@ -4,6 +4,9 @@
 description={A dummy symbol }}
 
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+\newacronym{item}{ITEM}{Department of Telematics}
+\newacronym{ime}{IME}{Faculty of Information Technology, Mathematics and Electrical Engineering}
+
 
 
 
