--- a/ttm4905_msc/glossary.tex
+++ b/ttm4905_msc/glossary.tex
@@ -6,6 +6,9 @@ description={A dummy symbol }}
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
 \newacronym{item}{ITEM}{Department of Telematics}
 \newacronym{ime}{IME}{Faculty of Information Technology, Mathematics and Electrical Engineering}
+\newacronym{b2b}{B2B}{Business-to-business}
+\newacronym{mm}{MM}{MazeMap}
+
 
 
 
