--- a/ttm4905_msc/glossary.tex
+++ b/ttm4905_msc/glossary.tex
@@ -7,8 +7,11 @@ description={A dummy symbol }}
 \newacronym{item}{ITEM}{Department of Telematics}
 \newacronym{ime}{IME}{Faculty of Information Technology, Mathematics and Electrical Engineering}
 \newacronym{b2b}{B2B}{Business-to-business}
+\newacronym{b2c}{B2C}{Business-to-consumer}
 \newacronym{mm}{MM}{MazeMap}
-
+\newacronym{b2b&c}{B2B&C}{Business-to-business-\&-consumer}
+\newacronym{saas}{SaaS}{Software-as-a-service}
+\newacronym{hei}{HEI}{Higher Education Insitution}
 
 
 
