--- a/ttm4905_msc/main.bib
+++ b/ttm4905_msc/main.bib
@@ -12,7 +12,7 @@
  numpages = {10},
 },
 
-@article{DBLP:journals/corr/BiczokMJK14,
+@article{BiczokMJK14,
   author    = {Gergely Bicz{\'{o}}k and
                Santiago Diez Martinez and
                Thomas Jelle and
@@ -26,7 +26,33 @@
   timestamp = {Sun, 02 Feb 2014 18:37:28 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/BiczokMJK14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+},
+
+@book{osterwalder2013business,
+  title={Business model generation: a handbook for visionaries, game changers, and challengers},
+  author={Osterwalder, Alexander and Pigneur, Yves},
+  year={2013},
+  publisher={John Wiley \& Sons}
+},
+
+@ONLINE {strategyzer2016,
+    author = "Strategyzer",
+    title  = "The Business  Model Canvas",
+    month  = "jun",
+    year   = "2016",
+    url    = "http://www.businessmodelgeneration.com/canvas/bmc"
+    urldate= "15-06-2016"
+},
+
+@PHDTHESIS {alexanderosterwalder2004,
+    author = "Alexander OSTERWALDER",
+    title  = "THE BUSINESS MODEL ONTOLOGY - A PROPOSITION IN A DESIGN SCIENCE APPROACH",
+    school = "UNIVERSITE DE LAUSANNE",
+    year   = "2004",
+    url    = "http://www.hec.unil.ch/aosterwa/PhD/Osterwalder_PhD_BM_Ontology.pdf"
+},
+
+
 
 
 
