--- a/ttm4905_msc/main.tex
+++ b/ttm4905_msc/main.tex
@@ -2,7 +2,7 @@
 
 % this package is just to generate text for demo-purposes
 \usepackage{blindtext}
-
+\usepackage{multirow}
 
 \title{Title} % The title of your assignement; NB use \newlinetitle to start a newline
 \author{Firstname Lastname} % Your firstname and lastname
