Updates from ShareLaTeX

--- a/ttm4905_msc/appendixB.tex
+++ b/ttm4905_msc/appendixB.tex
@@ -1,1 +1,36 @@
-\chapter{Appendix B}
+\chapter{International Research Survey Response Form}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/survey.png}}
+    \caption{Screenshot of the international research survey response form, part 1}
+    \label{fig:s1}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/s2.png}}
+    \caption{Screenshot of the international research survey response form, part 2}
+    \label{fig:s2}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/s3.png}}
+    \caption{Screenshot of the international research survey response form, part 3}
+    \label{fig:s3}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/s4.png}}
+    \caption{Screenshot of the international research survey response form, part 4}
+    \label{fig:s4}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/s5.png}}
+    \caption{Screenshot of the international research survey response form, part 5}
+    \label{fig:s5}
+\end{figure}
