--- a/ttm4905_msc/chapter6.tex
+++ b/ttm4905_msc/chapter6.tex
@@ -1,1 +1,5 @@
-\chapter{Chapter 6}
+\chapter{Discussion}
+This chapter includes discussion sorrounding the findings and 
+\section{Competitors}
+
+\section{}
