--- a/ttm4905_msc/main.bib
+++ b/ttm4905_msc/main.bib
@@ -40,8 +40,8 @@
     title  = "The Business  Model Canvas",
     month  = "jun",
     year   = "2016",
-    url    = "http://www.businessmodelgeneration.com/canvas/bmc"
-    urldate= "15-06-2016"
+    url    = "http://www.businessmodelgeneration.com/canvas/bmc",
+    note = "[Accessed 15-06-2016]"
 },
 
 @PHDTHESIS {alexanderosterwalder2004,
@@ -52,8 +52,136 @@
     url    = "http://www.hec.unil.ch/aosterwa/PhD/Osterwalder_PhD_BM_Ontology.pdf"
 },
 
+@misc{google2016, 
+    title={ Google Apps Script},
+    url={https://www.google.com/script/start/}, 
+    journal={Apps Script – Google Apps Script}, 
+    author={Google},
+    note = "[Accessed 15-06-2016]"
+},
 
+@article{jepson2009freemium,
+  title={Freemium for large enterprises:--a case study at Swedish software development company Teleopti about development and application of the freemium business model on the market for large enterprises},
+  author={Jepson, Anna and Lundin, Elin},
+  year={2009}
+},
 
+@ONLINE {teleopti2016,
+    author = "Teleopti",
+    title  = "WFM Core Functionality",
+    month  = "jun",
+    year   = "2016",
+    url    = "http://www.teleopti.com/content/images/wfmprocess/wfmillustration_total_600.png",
+    urldate= "15-06-2016",
+    note = "[Accessed 15-06-2016]"
+},
 
+@phdthesis{shankarananda2015empirical,
+  title={Empirical study and business model analysis of successful freemium strategies in digital products},
+  author={Shankarananda, Pronitha Mysore},
+  year={2015},
+  school={Massachusetts Institute of Technology}
+},
 
+@article{lamminpaa2014b2b,
+  title={B2B SALES AND MARKETING PLAN FOR LIMECRAFT},
+  author={Lamminp{\"a}{\"a}, Kalle},
+  year={2014},
+  publisher={Satakunnan ammattikorkeakoulu}
+},
 
+@ONLINE {davidskokN/A,
+    author = "David Skok",
+    title  = "How Sales Complexity impacts your Startup’s Viability",
+    year   = "N/A",
+    url    = "http://www.forentrepreneurs.com/sales-complexity/",
+    note = "[Accessed 15-06-2016]"
+},
+
+@ONLINE {freemium.orgN/A,
+    author = "Freemium.org",
+    title  = "Box",
+    year   = "N/A",
+    url    = "http://www.freemium.org/box/",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {tientzuozuora2014,
+    author = "Tien Tzuo, Zuora",
+    title  = "These Numbers Show That Box CEO Aaron Levie Is A Genius",
+    month  = "apr",
+    year   = "2014",
+    url    = "http://www.businessinsider.com/heres-why-boxs-aaron-levie-is-a-genius-2014-4?r=US\&IR=T\&IR=T",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {youtube2011,
+    author = "YouTube",
+    title  = "Aaron Levie - Why Freemium Works",
+    month  = "jun",
+    year   = "2011",
+    url    = "https://www.youtube.com/watch?v=7hpi5nUhssY",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {derrickharris2010,
+    author = "Derrick Harris",
+    title  = "How Splunk Is Riding IT Search Toward an IPO",
+    month  = "dec",
+    year   = "2010",
+    url    = "https://gigaom.com/2010/12/17/how-splunk-is-riding-it-search-toward-an-ipo/",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {splunkinc2016,
+    author = "Splunk Inc.",
+    title  = "Splunk Inc. Announces Fiscal Third Quarter 2016 Financial Results",
+    year   = "2016",
+    url    = "http://www.splunk.com/en_us/newsroom/press-releases/2015/splunk-inc-announces-fiscal-third-quarter-2016-financial-results.html",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@MISC {splunkinc20162,
+    author       = "Splunk Inc.",
+    title        = "Splunk Enterprise - Product Brief",
+    howpublished = "https://www.splunk.com/pdfs/product-briefs/splunk-enterprise.pdf",
+    year         = "2016",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {philiplay2014,
+    author = "Philip Lay",
+    title  = "How Splunk is Playing for Power in Big Data",
+    month  = "oct",
+    year   = "2014",
+    url    = "http://www.philiplay.com/2014/10/how-splunk-is-playing-for-power-in-big-data/",
+    note   = "[Accessed 16-06-2016]"
+},
+
+@ONLINE {europeancommision,
+    author = "European Commision",
+    title  = "Public Procurement",
+    url    = "http://ec.europa.eu/growth/single-market/public-procurement/index_en.htm",
+    note   = "[Accessed 19-06-2016]"
+},
+
+@ONLINE {procurement,
+    title = "Procurement Law",
+    year  = "2015",
+    url   = "https://lovdata.no/dokument/NL/lov/1999-07-16-69",
+    note  = "[Accessed 19-06-2016]"
+},
+
+@TECHREPORT {kristiantagesen2015,
+    author      = "Kristian Tagesen",
+    title       = "Will a free model that is successfully provenby start-ups like Skype, Waze andSnapchat work in a B2B\&C market?",
+    institution = "NTNU",
+    year        = "2015",
+    month       = "dec"
+},
+
+@ONLINE {patriciajones,
+    author = "Patricia Jones",
+    title  = "Sales Pipeline Management - Expert Point of View",
+    url    = "http://www.convergehub.com/blog/sales-pipeline-management-expert-point-view"
+}
