--- a/ttm4905_msc/appendixA.tex
+++ b/ttm4905_msc/appendixA.tex
@@ -1,1 +1,8 @@
-\chapter{Appendix A - Survey invitation letter}
+\chapter{Survey invitation letter}
+
+\begin{figure}[H]
+    \centering
+    \fbox{\includegraphics[width=\textwidth]{figs/letter.png}}
+    \caption{Invitation letter. The black box is a redacted proof of NTNU enrollment by the author}
+    \label{fig:letter}
+\end{figure}
