--- a/ttm4905_msc/glossary.tex
+++ b/ttm4905_msc/glossary.tex
@@ -6,13 +6,17 @@ description={A dummy symbol }}
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
 \newacronym{item}{ITEM}{Department of Telematics}
 \newacronym{ime}{IME}{Faculty of Information Technology, Mathematics and Electrical Engineering}
+\newacronym{ims}{IMS}{Indoor Mapping Service}
 \newacronym{b2b}{B2B}{Business-to-business}
 \newacronym{b2c}{B2C}{Business-to-consumer}
+\newacronym{b2bc}{B2B\&C}{Business-to-business-\&-consumer}
 \newacronym{mm}{MM}{MazeMap}
-\newacronym{b2b&c}{B2B&C}{Business-to-business-\&-consumer}
 \newacronym{saas}{SaaS}{Software-as-a-service}
 \newacronym{hei}{HEI}{Higher Education Insitution}
-
+\newacronym{sme}{SME}{Small and Medium Enterprises}
+\newacronym{arr}{ARR}{Annual Recurring Revenue}
+\newacronym{api}{API}{Application Programming Interface}
+\newacronym{smb}{SMB}{Small and Medium Business}
 
 
 
