Updates from ShareLaTeX

--- a/ttm4905_msc/chapter7.tex
+++ b/ttm4905_msc/chapter7.tex
@@ -1,83 +1,16 @@
-\chapter{Proposal of Business Model}
-This chapter will present the reader with the freemium-based business model proposal for MazeMap. 
+\chapter{Concluding Remarks and Further Work}
+\section{Concluding Remarks}
+This master's thesis has investigated if there is potential for an \gls{ims} that employs the freemium business model in a market segment consisting of \glspl{hei}. How MazeMap can alter their business model according to the needs of this particular market segment has been mapped. This has been achieved through the international market survey, case studies of \gls{b2b}-based companies and as a consequence a business model has emerged that functions as a proposition on how the freemium business model should be implemented. 
 
 
-\section{Business model}
-\subsection{Customer Segments}
+The background introduced terms like freemium, \gls{b2b}, \gls{b2c} and \gls{b2bc} to gain an understanding of the underlying principles that this thesis is built upon. Here, the potential benefits and caveats of applying a freemium model was presented, which also has been under scrutiny throughout this thesis. The case studies of Chapter 4 showed how a selection business in the \gls{b2b} market had managed to obtain success by employing a freemium business model, but it also highlighted any shortcomings that might have arisen as a consequence. The survey was presented in Chapter 5, along with the results and the discussion of the results. The findings from the survey, case studies and background created a foundation for proposing a freemium-based business model which was presented in Chapter 6, with the main contributions being how and what to monetise, as well as an increased market presence through marketing and the attendance of industry events for accelerating customer acquisition. 
 
-\begin{itemize}
-    \item Users of mazemap will want to be someone who resides over a certain area
-    \item Freemium might be harder to implement, due to regulatory affairs.
-    \item what needs to be in place customer side: low amount of financial means, prefferably wifi for navigation (might be seen as detrimental, but also may hamper the service). Existing customer base. 
-\end{itemize}
 
-\subsection{Value Propositions}
+A total of 39 respondents from 14 different countries responded to the survey, with most of the respondents being representatives of \glspl{hei} in Great Britain and The Netherlands. In total, the survey garnered a response rate of 20.2\%. The survey revealed that in the beginning of the survey, 64.1\% showed interest in an \gls{ims} without explicitly knowing about the potential benefits, and after this was stated this percentage was raised to 84.6\%. The number of respondents willing to pay for premium features were quite low, but in the freemium paradigm this matters little. An overwhelming majority of respondents also stated that price was a barrier in the potential procurement of an \gls{ims}. With the price factor trivialised by the introduction of freemium, it shows great potential for applying this type of business model at least for \glspl{ims}.
 
-\begin{itemize}
-    \item  Fleet management
-    \item Reduce missed appointments
-    \item For freemium: Cost saving by being initially free
-    \item For freemium: Try before you buy, no big initial investment. buy after need
-    \item Maintenance personell: Professions that see frequent changes of staff and working locations. Indoor maps enable these to find their way quicker, saving personell costs
-    \item Directions for meeting place and nearest parking for visitors
-    \item Alarms shows up on maps rather than a code for a specific location. Can save time in 
-    \item Equipment tracking, Internet of things
-    \item For Freemium: 
-\end{itemize}
 
-\subsection{Channels}
+The case studies showed that customer conversion, having a good product, stimulating demand for premium features and solid customer self-service mechanisms were all important success factors for any venture that wishes to apply the freemium business model in a \gls{b2b} setting. In turn, these and other important factors contributed in shaping the proposed business model, that is not necessarily only applicable to \glspl{ims}, but can be utilised in a broader sense for any company that wish to employ a freemium business model in a \gls{b2b} or \gls{b2bc} market. 
 
-\begin{itemize}
-    \item Cisco marketplace
-    \item Webpage
-    \item Develop leads inside businesses
-    \item For freemium: Hard to argue against initial high costs as with a non-freemium system
-\end{itemize}
 
-\subsection{Customer Relationships}
-\begin{itemize}
-    \item For freemium: Guidance as a service
-    \item As service matures, less active relationships, more automation
-    \item Interactions between the Businesses of the B2B\&C paradigm, sharing of experiences
-\end{itemize}
-
-\subsection{Revenue Streams}
-\begin{itemize}
-    \item Concept of freemium: The additional services paid for by the few pays for the many customers.
-    \item Additional paid services: Updating of maps, integration with timetabling, sms, existing IT systems, indoor pathing, indoor positioning, analytics, map editor.
-    
-\end{itemize}
-
-\subsection{Key Activities}
-\begin{itemize}
-    \item Indoor mapping roughly ~80\% of usage
-    \item Integration of maps
-    \item Rework and update map data
-    \item Accomodating for indoor navigation and pathfinding, via Cisco and other partners
-    \item Integration into booking systems
-    \item Marketing, sales and customer support
-    \item Key Account management - large customers with many needs
-    \item After purchases: Revenue through added services as seen fit by the establishment
-\end{itemize}
-
-\subsection{Key Resources}
-\begin{itemize}
-    \item MM servers
-    \item MM's floor plan to interactive map engine
-    \item software developers
-    \item Customer's mapping data + metadata
-\end{itemize}
-
-\subsection{Key Partnerships}
-\begin{itemize}
-    \item Positional services i.e. Cisco
-    \item Cloud storage: servers + redundancy nodes for better access throughout the world.
-\end{itemize}
-
-\subsection{Cost Structure}
-\begin{itemize}
-    \item Value driven: value creation and counceling
-    \item Offices/personell: development, renting facilities.
-    \item High startup costs: software development team, servers, offices
-    \item Low running costs: scalable platform, customer administrates maps (can add POIs etc)
-\end{itemize}
+\section{Future Work}
+Demand for an \gls{ims} as well as security concerns were also major factors that may hinder the procurement of such a service even if it is free. It would be natural to further research how these factors can be mitigated, so that one of the main goals of freemium namely increasing the customer base may be achieved. Furthermore, a more uniform representation of different countries in a survey is also something left to be desired. It is hard to determine the factors that caused this, but language barriers were certainly present in the surveying process. If surveys made in different languages were a possibility, it could possibly increase the response rate drastically. Additionally, a more qualitative survey could be performed, where the customer segment is allowed to unfold on important matters in relation to freemium based \glspl{ims}. Lastly, this thesis focused on one particular market segment, and there are several other segments to explore and survey. It is therefore a possibility to gain a better understanding of how the service delivered can get more customers, by targeting other segments of the market. 
