--- a/ttm4905_msc/glossary.tex
+++ b/ttm4905_msc/glossary.tex
@@ -12,11 +12,19 @@ description={A dummy symbol }}
 \newacronym{b2bc}{B2B\&C}{Business-to-business-\&-consumer}
 \newacronym{mm}{MM}{MazeMap}
 \newacronym{saas}{SaaS}{Software-as-a-service}
-\newacronym{hei}{HEI}{Higher Education Insitution}
-\newacronym{sme}{SME}{Small and Medium Enterprises}
+\newacronym{hei}{HEI}{Higher Education Institution}
+\newacronym{sme}{SME}{Small and Medium-sized Enterprises}
 \newacronym{arr}{ARR}{Annual Recurring Revenue}
 \newacronym{api}{API}{Application Programming Interface}
-\newacronym{smb}{SMB}{Small and Medium Business}
-
+\newacronym{smb}{SMB}{Small and Medium-sized Business}
+\newacronym{scup}{SCUP}{Society for College and University Planning}
+\newacronym{appa}{APPA}{APPA: Leadership in Educational Facilities}
+\newacronym{tefma}{TEFMA}{Tertiary Education Facilities Management Association}
+\newacronym{cele}{CELE}{Center for Effective Learning Environments}
+\newacronym{crm}{CRM}{Customer Relationship Management}
+\newacronym{sdk}{SDK}{Software Development Kit}
+\newacronym{ble}{BLE}{Bluetooth Low Energy}
+\newacronym{poi}{POI}{Point-of-interest}
+\newacronym{nhs}{NHS}{National Health Service}
 
 
