--- a/ttm4905_msc/chapter5.tex
+++ b/ttm4905_msc/chapter5.tex
@@ -43,12 +43,12 @@ Other            & 50                 & 4                & 8.0\%                
 \end{figure}
 
 \section{Introductory questions - Question Group 1}
-Figure~\ref{surveyquestions} shows all questions asked in the survey according to their respective group of questions. Questions have been grouped in a manner that will present the survey results in a clear way for the reader. The first group of questions are introductory questions, concerning the respondent's current indoor mapping situation. After respondents stated their affiliation, the question "Are you currently using an indoor mapping service?" (Q1) was asked, with results shown in Figure~\ref{fig:q1}. The rationale behind including this question, was to see whether the possibility of churning existing \gls{ims} users existed in the event the respondent replied "yes". Conversely, respondents replying "no" are also interesting subjects for the surveyor. These are potential first-time procurers of \glspl{ims}, and together with Q2 they make up potential customers. The majority of respondents (64,1\%) had no \gls{ims} in place, while 35,9\% stated that they have an \gls{ims} in place. 
+Table~\ref{surveyquestions} shows all questions asked in the survey according to their respective group of questions. Questions have been grouped in a manner that will present the survey results in a clear way for the reader. The first group of questions are introductory questions, concerning the respondent's current indoor mapping situation. After respondents stated their affiliation, the question "Are you currently using an indoor mapping service?" (Q1) was asked, with results shown in Figure~\ref{fig:q1}. The rationale behind including this question, was to see whether the possibility of churning existing \gls{ims} users existed in the event the respondent replied "yes". Conversely, respondents replying "no" are also interesting subjects for the surveyor. These represent potential first-time procurers of an \glspl{ims}, and together with those who replied "Yes" in Q2 they make up potential customers. The majority of respondents (64,1\%) had no \gls{ims} in place, while 35,9\% stated that they have an \gls{ims} in place. 
 
 \begin{figure}[H]
     \centering
     \fbox{\includegraphics{figs/q1.png}}
-    \caption{Q1: "Are you currently using an indoor mapping service?". Blue indicates "yes" and red indicates "No"}
+    \caption{Q1: "Are you currently using an indoor mapping service?". Blue indicates "Yes" and red indicates "No"}
     \label{fig:q1}
 \end{figure}
 
@@ -59,33 +59,35 @@ Based on the response given in Q1 respondents were either forwarded to Q2 or Q3.
 \begin{figure}[H]
     \centering
     \fbox{\includegraphics{figs/q2.png}}
-    \caption{Q1: "Are you currently using an indoor mapping service?". Blue indicates "yes" and red indicates "No"}
+    \caption{Q2: "Are you willing to consider using an indoor mapping service?". Blue indicates "Yes" and red indicates "No"}
     \label{fig:q2}
 \end{figure}
 
 
-\begin{table}[htbp]
+\begin{table}[]
 \centering
 \caption{Questions asked in the International Market Survey}
 \label{surveyquestions}
-\begin{tabular}{|c|c|p{2cm}|p{8cm}|}
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|c|c|c|l|}
 \hline
-\textbf{Keyword} &      & \textbf{Question Group} & \textbf{Question phrasing}                                                                                                                                                                                             \\ \hline
-Q1               &      & 1                       & \pbox{8cm}{Are you currently using an indoor mapping service?}                                                                                                                                                                     \\ \hline
-                 & Q2   & 1                       & \pbox{8cm}{Are you willing to consider using an indoor mapping service?}                                                                                                                                                           \\ \hline
-                 & Q2.1 & 1                       & \pbox{8cm}{If no, please state the reason as to why this is not desired}                                                                                                                                                          \\ \hline
-Q3               &      & 2                       & \pbox{8cm}{Given an indoor mapping service that will entail several benefits for your institution, please rate the initial interest in such a service}                                                     \\ \hline
-Q4               &      & 2                       & \pbox{8cm}{How much of an concern would price be in procuring an indoor mapping service?}                                                                                                                                          \\ \hline
-Q5               &      & 3                       & \pbox{8cm}{Please rank the following services in terms of willingness to pay: "Navigation and indoor pathfinding", "Timetable integration", "Integration with SMS, apps, IT-infrastructure etc." and "Automatic updating of maps"} \\ \hline
-Q6               &      & 4                       & \pbox{8cm}{Which factors would be of concern when procuring an indoor mapping service?}                                                                                                                                            \\ \hline
-\end{tabular}
+\textbf{Keyword} & \textbf{} & \multicolumn{1}{l|}{\textbf{\begin{tabular}[c]{@{}l@{}}Question\\ Group\end{tabular}}} & \textbf{Question phrasing}                                                                                                                                                                                                                                             \\ \hline
+Q1               &           & 1                                                                                      & Are you currently using an indoor mapping service?                                                                                                                                                                                                                     \\ \hline
+                 & Q2        & 1                                                                                      & Are you willing to consider using an indoor mapping service?                                                                                                                                                                                                           \\ \hline
+                 & Q2.1      & 1                                                                                      & If no, please state the reason as to why this is not desired                                                                                                                                                                                                           \\ \hline
+Q3               &           & 2                                                                                      & \begin{tabular}[c]{@{}l@{}}Given an indoor mapping service that will entail\\ several benefits for your institution, \\ please rate the initial interest in such a service\end{tabular}                                                                                \\ \hline
+Q4               &           & 2                                                                                      & \begin{tabular}[c]{@{}l@{}}How much of an concern would price be in procuring \\ an indoor mapping service?\end{tabular}                                                                                                                                               \\ \hline
+Q5               &           & 3                                                                                      & \begin{tabular}[c]{@{}l@{}}Please rank the following services in terms of willingness to pay: \\ "Navigation \& indoor pathfinding", "Timetable integration", \\ "Integration with SMS, apps, IT-infrastructure etc." \\ and "Automatic updating of maps"\end{tabular} \\ \hline
+Q6               &           & 4                                                                                      & \begin{tabular}[c]{@{}l@{}}Which factors would be of concern when procuring\\ an indoor mapping service?\end{tabular}                                                                                                                                                  \\ \hline
+\end{tabular}%
+}
 \end{table}
 
 \section{Measuring Interest - Question Group 2}
 This section contains questions engineered to measure the interest for \glspl{ims} in a quantitative manner. The first question Q3 was formulated as follows: "Given an indoor mapping service that will entail several benefits for your institution, please rate the initial interest in such a service". Additionally, respondents were presented with examples of how an \gls{ims} could benefit their institution~\footnote{Improve visitor experience by showing them where to go, how to get there and even where to park. Improve employee efficiency by showing new personnel i.e. cleaning personnel around campus without the need for a dedicated guide. Improve the experience for students by alleviating stress and uncertainty by showing students and staff alike to the correct location in time for class. Additionally, an indoor mapping enables service personnel to readily locate the place of interest as opposed to decoding a textual description.}. Possible answers were presented on a Likert scale with 1 denoting "Not interested at all" and 5 denoting "Highly interested".
 
 
-Figure~\ref{fig:q3} shows the results from Q3. Looking at the statistics from Table~\ref{q3q4stats} a mean of 3,872, standard deviation of 1,239 and the most common answer being "Interested (4)", it can be argued that an initial interest for \glspl{ims} exists. This further reinforced by the fact that 64,1\% showed initial interest in such a service. These results can be said to conclusively point towards a definite interest in \glspl{ims} among the respondents. 32\% were initially not willing to consider using an \gls{ims} (Q2), but after being presented with the potential benefits of an \gls{ims}, this number was lowered to 15,4\%. This can be viewed as a positive trend, but it can also indicate that the market surveyed in this case is not aware of the possible positive benefits an \gls{ims} entails.
+Figure~\ref{fig:q3} shows the results from Q3. Looking at the statistics from Table~\ref{q3q4stats} a mean of 3,872 and the most common answer being "Interested (4)", it can be argued that an initial interest for \glspl{ims} exists. This further reinforced by the fact that 64,1\% showed initial interest in such a service. These results can be said to conclusively point towards a definite interest in \glspl{ims} among the respondents. 32\% were initially not willing to consider using an \gls{ims} (Q2), but after being presented with the potential benefits of an \gls{ims}, this number was lowered to 15,4\%. This can be viewed as a positive trend, but it can also indicate that the market surveyed in this case is not aware of the possible positive benefits an \gls{ims} entails.
 
 
 \begin{figure}
@@ -97,22 +99,24 @@ Figure~\ref{fig:q3} shows the results from Q3. Looking at the statistics from Ta
 
 
 
-Similar to Q3, Q4 was posed as a quantitative question and asked respondents "how much of an concern would price be in procuring an indoor mapping service?" This question aimed to measure the viability of freemium in the \gls{b2bc} paradigm. A low concern for price might indicate that freemium itself is not a main proponent in accelerating customer acquisition, and conversely a high concern for price would indicate a certain viability for freemium among price-sensitive customers. Compared to Q3, this question garnered even more positive results: A mean of 4,026, standard deviation of 1,390 and median of 4 indicates a trend that the respondents were price-sensitive. Further cementing this notion is the fact that 76,9\% of respondents viewed price as a somewhat high to a high concern. In a non-freemium business paradigm these results would potentially be negative indicators, as price-sensitive customers could potentially lead to a enlonged sales pipeline. However, in the freemium paradigm these are excellent results, since price seems to be a major factor in the potential procurement of an \gls{ims}. The results from this question can be seen in Figure~\ref{fig:q4}
+Similar to Q3, Q4 was posed as a quantitative question and asked respondents "how much of an concern would price be in procuring an indoor mapping service?" This question aimed to measure the viability of freemium in the \gls{b2bc} paradigm. A low concern for price might indicate that freemium itself is not a main proponent in accelerating customer acquisition, and conversely a high concern for price would indicate a certain viability for freemium among price-sensitive customers. Compared to Q3, this question garnered even more positive results: A mean of 4,026 and a median of 4 indicates a trend that the respondents were price-sensitive. Further cementing this notion is the fact that 76,9\% of respondents viewed price as a somewhat high to a high concern. In a non-freemium business paradigm these results would potentially be negative indicators, as price-sensitive customers could potentially lead to a enlonged sales pipeline. However, in the freemium paradigm these are excellent results, since price seems to be a major factor in the potential procurement of an \gls{ims}. The results from this question can be seen in Figure~\ref{fig:q4}
+
 
 
 \begin{table}[]
 \centering
-\caption{Statistics Question Group 2}
+\caption{Statistics: Question Group 2}
 \label{q3q4stats}
+\resizebox{\textwidth}{!}{%
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{Parameter} & \textbf{Q3: Interest} & \textbf{Q4: Concerning price} \\ \hline
 Sample size        & 39                    & 39                            \\ \hline
 Mean               & 3,872                 & 4,026                         \\ \hline
-Standard deviation & 1,239                 & 1,390                         \\ \hline
 Median             & 4                     & 4                             \\ \hline
 Mode               & Interested (4)        & Somewhat High Concern (4)     \\ \hline
-\end{tabular}
+\end{tabular}%
+}
 \end{table}
 
 
@@ -128,17 +132,19 @@ This group of questions contains one question, divided into 4 subquestions. Thus
 
 \begin{table}[]
 \centering
-\caption{Statistics for Question Group 3}
+\caption{Statistics: Question Group 3}
 \label{q5stats}
+\resizebox{\textwidth}{!}{%
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-\textbf{Parameter} & \textbf{Q5.1} & \textbf{Q5.2} & \textbf{Q5.3} & \textbf{Q5.4} \\ \hline
-Sample size        & 39            & 39            & 39            & 39            \\ \hline
-Mean               & 2.59          & 2.538         & 2.769         & 2.872         \\ \hline
-Standard deviation & 1.312         & 1.274         & 1.266         & 1.341         \\ \hline
-Median             & 3             & 3             & 3             & 3             \\ \hline
-Mode               & Neutral (3)   & Neutral (3)   & Neutral (3)   & Neutral (3)   \\ \hline
-\end{tabular}
+\textbf{Parameter}      & \textbf{Q5.1} & \textbf{Q5.2} & \textbf{Q5.3} & \textbf{Q5.4} \\ \hline
+Sample size             & 39            & 39            & 39            & 39            \\ \hline
+Mean                    & 2.59          & 2.538         & 2.769         & 2.872         \\ \hline
+Median                  & 3             & 3             & 3             & 3             \\ \hline
+Mode                    & Neutral (3)   & Neutral (3)   & Neutral (3)   & Neutral (3)   \\ \hline
+Willing to pay (4 \& 5) & 24.4\%        & 31,7\%        & 31,7\%        & 36.6\%        \\ \hline
+\end{tabular}%
+}
 \end{table}
 
 
@@ -148,7 +154,7 @@ For this question the respondents were given the following potentially beneficia
 While not a necessary component of an indoor mapping service, navigation and indoor path finding can help users find their desired location. A plethora of technologies exist for this purpose using existing Wi-Fi infrastructure, Bluetooth, beacons, smartphone sensors, magnetic positioning etc.
 \end{displayquote}
 
-Figure~\ref{fig:q51} shows results from Q5.1. The statistics show a mean of 2,59, standard deviation of 1,312 and a median of 3 making the mode "Neutral (3)". These numbers do not indicate a strong willingness or lack thereof of this particular feature, and represents the third most popular premium service. The numbers are however slightly on the positive side of the scale with a non-negative median, however there were equally many neutral as there were thosw with low willingness to pay for this type of service. \gls{mm} has stated that their primary focus is making the indoor maps themselves, and as much as 80\% of its users do not use any form of indoor navigation (Jelle, personal communication 17.09.2015). This fact is to some extent reflected in these results. The respondents were however not informed that an \gls{ims} such as \gls{mm} has a partner in Cisco that enables usage of existing Wi-Fi infrastructure for positioning and navigation. Given that indoor navigation techniques are in its infancy, it can perhaps be expected to see a rise in the technologies applied in this field in the future. 
+Figure~\ref{fig:q51} shows results from Q5.1. The statistics show a mean of 2,59 and a median of 3 making the mode "Neutral (3)". These numbers do not indicate a strong willingness or lack thereof of this particular feature, and represents the third most popular premium service. The numbers are however slightly on the positive side of the scale with a non-negative median, however there were equally many neutral as there were those with low willingness to pay for this type of service. \gls{mm} has stated that their primary focus is making the indoor maps themselves, and as much as 80\% of its users do not use any form of indoor navigation (Jelle, personal communication 17.09.2015). This fact is to some extent reflected in these results. The respondents were however not informed that an \gls{ims} such as \gls{mm} has a partner in Cisco that enables usage of existing Wi-Fi infrastructure for positioning and navigation. Given that indoor navigation techniques are in its infancy, it can perhaps be expected to see a rise in the technologies applied in this field in the future. 
 
 \begin{figure}[H]
     \centering
@@ -163,7 +169,7 @@ Q5.2 asked the users to rate their willingness to pay for timetable integration.
 "Where", "how" and "when" are commonly asked questions when an appointment is due or a meeting is taking place. Timetable integration aims to answer the two former questions by providing an indoor map and which path to take to get there.
 \end{displayquote}
 
-With a mean of 2,538, standard deviation of 1,274 and median of 3, this was the least popular of the presented value-adding services. Figure~\ref{fig:q52} shows the results being quite even on all but one of the alternative answers, possibly indicating a divided set of responders. As with Q5.1, these numbers to not indicate any trends or strong or weak desires towards this type of service, but it is important to emphasize that some respondents were unfamiliar with \glspl{ims} in general, or had no desire to acquire one. In hindsight, the author could have provided respondents of the survey with visual rather than textual examples of the value-adding, premium services to give respondents a better overview of the implications and usefulness of these services. 
+With a mean of 2,538 and a median of 3, this was the least popular of the presented value-adding services. Figure~\ref{fig:q52} shows the results being quite even on all but one of the alternative answers, possibly indicating a divided set of responders. As with Q5.1, these numbers to not indicate any trends or strong or weak desires towards this type of service, but it is important to emphasize that some respondents were unfamiliar with \glspl{ims} in general, or had no desire to acquire one. In hindsight, the author could have provided respondents of the survey with visual rather than textual examples of the value-adding, premium services to give respondents a better overview of the implications and usefulness of these services. 
 
 
 \begin{figure}[H]
@@ -180,7 +186,7 @@ The next question in the group concerned the integration of an \gls{ims} into SM
 An API that integrates indoor maps with the existing services mentioned above, aims to enable seamlessly integrating indoor maps into already existing systems and services without the need to manually do so for every service.
 \end{displayquote}
 
-The results of this question can be seen in Figure~\ref{fig:q53}, with a mean of 2.769, standard deviation of 1,266 and median of 3. This makes it the second most popular service presented, with 61,6\% of replies being Neutral (3) and above. As stated previously, it must be stressed that it might be hard to visualise how these premium features work in a concrete scenario. If potential \gls{ims} buyers are largely unaware of the benefits, it can make this particular service a hard sell. Furthermore, integrating an \gls{ims} into existing infrastructure might represent a security risk, especially when dealing with sensitive data. Therefore, it was expected that this question would score low, but the results shows it being on par with the others.  
+The results of this question can be seen in Figure~\ref{fig:q53}, with a mean of 2.769 and median of 3 making it the second most popular service presented, with 61,6\% of replies being Neutral (3) and above. As stated previously, it must be stressed that it might be hard to visualise how these premium features work in a concrete scenario. If potential \gls{ims} buyers are largely unaware of the benefits, it can make this particular service a hard sell. Furthermore, integrating an \gls{ims} into existing infrastructure might represent a security risk for the procuring part. This pertains to any potential security holes an \gls{ims} might have, and if such holes are present, malicious users are potentially able to gather sensitive data such as passwords and user-names. Therefore, it was expected that this question would score low, but the results shows it being on par with the others.  
 
 \begin{figure}[H]
     \centering
@@ -196,7 +202,7 @@ The last question in the group, Q5.4, asked respondents to rate a service that a
 Larger establishments tend to change over time, and often see around 10\% of buildings change anually\footnote{Jelle, personal communication, 25.09.2015}. Manually updating indoor maps can therefore be a tedious and time-consuming activity.
 \end{displayquote}
 
-Figure~\ref{fig:q54} shows results from Q5.4, with statistics showing a mean of 2.872, standard deviation of 1,341 and median of 3 (Neutral). For respondents completely unaccustomed to \glspl{ims}, this question would perhaps be the hardest to answer, since it directly revolves around an \gls{ims}. As stated in the features listing, \glspl{hei} may see over 10\% of its structures change during the course of a year. This is possibly reflected in the statistics, as they show this feature being the most popular of the four. It also had the highest number of interested respondents at 35,9\%. It can be speculated that the \glspl{hei} contacted in relation to the survey were aware that updating floorplans is quite an undertaking, and an \gls{ims} with this feature would be well received. 
+Figure~\ref{fig:q54} shows results from Q5.4, with a mean of 2.872 and a median of 3 (Neutral). For respondents completely unaccustomed to \glspl{ims}, this question would perhaps be the hardest to answer, since it directly revolves around an \gls{ims}. As stated in the features listing, \glspl{hei} may see over 10\% of its structures change during the course of a year. This is possibly reflected in the statistics, as they show this feature being the most popular of the four. It also had the highest number of interested respondents at 35,9\%. It can be speculated that the \glspl{hei} contacted in relation to the survey were aware that updating floor-plans could be quite an undertaking, and an \gls{ims} with this feature would be well received. 
 
 
 \begin{figure}[H]
@@ -209,7 +215,7 @@ Figure~\ref{fig:q54} shows results from Q5.4, with statistics showing a mean of 
 \newpage
 
 \section{Potential Procurement Concerns - Question Group 4}
-The final group of questions asked concerned potential aversions the \glspl{hei} contacted might have. At the end of the survey, respondents were welcome to freely add anything concerning the survey, the free model or \glspl{ims}, but few chose to do this. The rationale behind having this question group was to map the potential hinderances in procurement of an \gls{ims}. The question asked in this section consisted of checkboxes where respondents were free to mark as many options as desired, and an overview of the replies is shown in Table~\ref{q6}.
+The final group of questions asked concerned potential aversions the \glspl{hei} contacted might have. At the end of the survey, respondents were welcome to freely add anything concerning the survey, the free model or \glspl{ims}, but few chose to do this. The rationale behind having this question group was to map the potential hinderances in procurement of an \gls{ims}. The question asked in this section consisted of checkboxes where respondents were free to mark as many options as desired, and an overview of the replies is shown in Table~\ref{q6}. Respondents were free to interpret "Security Concerns" in their own way. However, it was the author's intention to gauge if the respondent owning the rights to the indoor maps themselves was a concern or not.
 
 
 \begin{table}[H]
@@ -236,7 +242,7 @@ Q6, the final question of the survey prompted the respondents with the following
     \item \textit{"Campus user experience"}
 \end{itemize}
 
-Some of these pertains the actual usefulness of the service itself, while some concern the user experience. As is reviewed at the end of the chapter, it can be said that the market under scrutiny is more concerned with the user experience than price. Although \gls{b2b} and \gls{b2bc} markets have many similarities, this can be said to be a difference in this case. As the business part of \gls{b2bc} can be said to govern the consumer product choices in the matter, quality, ease of use and usefulness seems to be factors that must not be overlooked in the case for \glspl{hei}.
+Some of these factors pertains to the actual usefulness of the service itself, while some concern the user experience. Although \gls{b2b} and \gls{b2bc} markets have many similarities, this can be said to be a difference in this case: As the purchasing business in a \gls{b2bc} scenario governs the the service provided to its clients, quality, ease of use and usefulness are factors that must not be overlooked in the case for \glspl{hei}.
 
 
 
@@ -251,4 +257,4 @@ The most chosen factor was "Price" at 84,6\%, followed by "Security Concerns" at
 \begin{displayquote}
 "We have to deal with the rulings of public procurement, and it would be the total cost that is the underlying factor. The content of the "basic" package is detrimental to a potential procurement, as it may trigger further needs for more services. If a(n) [indoor mapping] system can satisfy the demands and rules of a public procurement, then [a freemium-based \gls{ims}] is of interest".
 \end{displayquote}
-In terms of the viability of freemium in this scenario, this can be viewed positively and negatively: The positive aspect of this is that potential leads and prospects in an organization that is in a procurement phase, can have an easier time convincing board members etc. of obtaining a service that will cost nothing. On the other hand, long-term and total costs may be more concerning for potential procurers, than a service or product being free initially. As stated by the above respondent, the contents of the non-premium parts were detrimental, and may trigger the need for purchasing premium parts of the product or service.
+In terms of the viability of freemium in this scenario, this can be viewed positively and negatively: The positive aspect of this is that potential leads and prospects in an organization that is in a procurement phase, might convince senior management personnel more easily, to obtain a service that will cost nothing. On the other hand, long-term and total costs may be more concerning for potential procurers than a service or product being free initially. As stated by the above respondent, the contents of the non-premium parts were detrimental, and may trigger the need for purchasing premium parts of the product or service.
